fix: read config lazily from VisitorState, not constructor injection
Critical fix found by actually validating the Maven consumer example
against a real, separate build (not just CompilationTestHelper, which
uses a different, more permissive checker-loading path than real
plugin discovery): ForbiddenApiChecker's ErrorProneFlags-constructor
crashed with ServiceConfigurationError the moment a real consumer
compiled against it, because @AutoService-registered plugin checkers
are instantiated by java.util.ServiceLoader, which requires a public
no-arg constructor - full stop, no exceptions. Constructor injection
of ErrorProneFlags only works for checkers loaded through Error
Prone's own reflective injector (the path CompilationTestHelper uses
internally), which is exactly why 108 passing tests never caught this.

Fixed by switching to a no-arg constructor and reading ErrorProneFlags
lazily via VisitorState.errorProneOptions().getFlags() in a memoizing
accessor, threaded through every matcher method instead.

Also fixes the same --release/--add-exports incompatibility in the
consumer example's own pom.xml that the parent project already hit
(and, as it turns out, isn't limited to the com.sun.tools.javac.code/
.comp exports - confirmed empirically it affects the plain 8-package
set too), and documents both in the README/TASKS.md.

Re-verified end-to-end: examples/consumer-example now compiles
cleanly against the real published jar, and correctly fails compilation
with the expected diagnostic when a forbidden API is introduced.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>